--- a/style.css
+++ b/style.css
@@ -685,8 +685,10 @@ input::placeholder {
   font-family: var(--ffSecondary);
   color: white;
   font-size: 2rem;
-  padding: 0.8rem;
+  padding: 1rem;
   border: none;
+  width: 35%;
+  
 }
 
 .contactBox3 button:hover {
@@ -809,7 +811,7 @@ span {
 .hamburgerIcon{
     display: block;
     position: absolute;
-    top: 4.5rem;
+    top: 4rem;
     right: 5rem;
     border: 1px solid black;
     padding: 0.75rem;
@@ -873,6 +875,8 @@ line-height: 3;
 
   .contactBox3 button {
     margin-bottom: 4rem;
+    font-size: 2rem;
+    width: 40%;
   }
 
   .form {
