--- a/style.css
+++ b/style.css
@@ -752,8 +752,10 @@ input::placeholder {
   color: #212529;
   font-size: 2rem;
   font-weight: 400;
-  line-height: 0.2;
-  margin-bottom: 3rem;
+  /* line-height: 0.2; */
+  /* margin-bottom: 3rem; */
+  /* row-gap: 30px; */
+  /* gap: 2rem; */
 
 }
 
@@ -763,11 +765,14 @@ input::placeholder {
   height: 100%;
   /* padding: 5rem 0rem; */
   padding-top: 2rem;
-  /* padding-bottom: 2rem; */
+ 
+  
 }
 
 .contactIconBody2 {
   border-top: 2px solid black;
+  margin-top: 2rem;
+  
 
 }
 
@@ -776,7 +781,7 @@ input::placeholder {
   font-family: var(--ffsecondary);
   font-weight: 500;
   color: #212529;
-  font-size: 2rem;
+   font-size: 2rem;
 }
 
 span {
