--- a/style.css
+++ b/style.css
@@ -383,6 +383,7 @@ footer {
   font-size: 4rem;
   color: #212529;
   font-weight: 900;
+  padding-bottom: 2rem;
 }
 
 .facilityBox2 {
@@ -422,6 +423,10 @@ footer {
 /* Facility code */
 
 /* Popular code */
+.popularBody2{
+  column-gap: 3rem;
+}
+
 .popularBox1 {
   /* background-color: #290000; */
   width: 100%;
@@ -442,26 +447,24 @@ footer {
   font-size: 4rem;
   color: #212529;
   font-weight: 900;
+  padding-bottom: 2rem;
 }
 
 .popularBox2 {
   /* background-color: #ffffff; */
   width: 100%;
   height: 100%;
-  /* margin: 1rem; */
-
 }
 
 .popularBox2 figure img {
   /* background-color: rgb(175, 53, 53); */
   width: 100%;
   aspect-ratio: 1/1;
-
 }
 
 .popularBox2 h3 {
   /* background-color: #ffffff; */
-  margin: 0rem 0rem;
+  margin: 2rem 0rem;
   font-family: var(--ffsecondary);
   color: #212529;
   font-size: 2rem;
@@ -494,6 +497,7 @@ footer {
   font-weight: 900;
   font-size: 4rem;
   color: #212529;
+  padding-bottom: 2rem;
 }
 
 .galleryBody2 {
@@ -541,6 +545,7 @@ footer {
   font-size: 4rem;
   font-weight: 900;
   color: #212529;
+  padding-bottom: 2rem;
 }
 
 .teamBody2 {
@@ -866,6 +871,11 @@ line-height: 3;
 
   .contactIconBox1 {
     grid: 4;
+    padding-bottom: 3rem;
+   
+  }
+  .contactIconBox1 h3{
+    margin-top: 3rem;
   }
 
   .contactIconBox5 {
@@ -881,7 +891,7 @@ line-height: 3;
   .contactBox3 button {
     margin-bottom: 4rem;
     font-size: 2rem;
-    width: 40%;
+   padding: 1.2rem 0rem;
   }
 
   .form {
