--- a/style.css
+++ b/style.css
@@ -691,9 +691,9 @@ input::placeholder {
   font-family: var(--ffSecondary);
   color: white;
   font-size: 2rem;
-  padding: 1.5rem;
+  padding: 2rem 2.5rem;
   border: none;
-  width: 40%;
+  /* width: 40%; */
 
 }
 
@@ -892,7 +892,7 @@ span {
 
   .contactBox3 button {
     margin-bottom: 4rem;
-    font-size: 2rem;
+    font-size: 2.5rem;
   }
 
   .form {
