--- a/style.css
+++ b/style.css
@@ -563,7 +563,7 @@ footer {
 
 .teamBox2 figure img {
   /* background-color: tomato; */
-  width: 100%;
+  /* width: 100%; */
   aspect-ratio: 1/1;
 }
 
@@ -691,9 +691,9 @@ input::placeholder {
   font-family: var(--ffSecondary);
   color: white;
   font-size: 2rem;
-  padding: 1rem 1rem;
+  padding: 1rem;
   border: none;
-  width: 40%;
+  width: 35%;
 
 }
 
